--- a/guides/core-workflows/mocking-techniques.mdx
+++ b/guides/core-workflows/mocking-techniques.mdx
@@ -1,285 +1,308 @@
 ---
-title: "Writing and Using Mocks Effectively"
-description: "A practical guide to creating and leveraging mock objects, including crafting expectations, stubbing behaviors, and selecting the right strictness levels for different testing needs. This page introduces key macros and patterns and demonstrates handling common mocking scenarios."
+title: "Mocking Techniques and Patterns"
+description: "Explores practical ways to use GoogleMock for dependency injection, controlling object behavior in tests, and verifying interactions. Demonstrates patterns for ON_CALL, EXPECT_CALL, and action/matcher combinations."
 ---
 
-# Writing and Using Mocks Effectively
+# Mocking Techniques and Patterns
 
-A practical guide to creating and leveraging mock objects, including crafting expectations, stubbing behaviors, and selecting the right strictness levels for different testing needs. This page introduces key macros and patterns and demonstrates handling common mocking scenarios.
-
----
-
-## 1. Introduction to Mocking
-
-Mocking is a powerful technique that allows you to simulate and control the behavior of dependencies in your C++ tests. By using mock objects, you can focus on testing a unit in isolation, verifying interactions, and tuning behavior dynamically.
-
-This guide focuses on effective creation and use of mock objects in GoogleTest with GoogleMock (gMock).
+This guide explores practical approaches to using GoogleMock for dependency injection, managing mock object behavior during tests, and verifying interactions effectively. You will learn how to utilize patterns involving `ON_CALL`, `EXPECT_CALL`, and combinations of actions and matchers to write robust, maintainable tests.
 
 ---
 
-## 2. Defining Mock Classes
+## 1. Understanding the Workflow
 
-GoogleMock provides the `MOCK_METHOD` macro to generate mock methods in a mock class. When defining a mock class:
+### Task Description
+This page helps you master practical mocking techniques that enable precise control over mock objects in your tests. You will learn how to set default behaviors, specify exact call expectations, combine actions and matchers, and compose interaction patterns to ensure your tests verify component collaborations accurately.
 
-- Always inherit from the class to mock (or implement its interface).
-- Place `MOCK_METHOD` declarations in the `public:` section.
-- Specify method signature pieces including return type, method name, argument list, and method qualifiers (like `const`, `override`).
+### Prerequisites
+- Basic understanding of GoogleMock and mock class definitions.
+- Familiarity with mock methods, matchers for specifying expected arguments, and actions for defining mock responses.
+- Access to a mock class you intend to use in your test.
 
-### Example: Mocking a Simple Interface
+### Expected Outcome
+By following this guide, you'll be able to:
+- Apply `ON_CALL` to set default mock method behaviors without enforcing call counts.
+- Use `EXPECT_CALL` to declare expectations, including call counts, argument matching, and return behaviors.
+- Combine multiple expectations and handle ordered vs unordered calls.
+- Control mock method call policies through wrappers like `NiceMock`, `StrictMock`, and `NaggyMock`.
+
+### Time Estimate
+Allocate approximately 20-30 minutes to absorb the concepts and practice examples.
+
+### Difficulty Level
+Intermediate: assumes you have some experience writing tests with GoogleMock.
+
+---
+
+## 2. Core Techniques and Patterns
+
+### Using `ON_CALL` for Default Behaviors
+Set up default method behaviors to respond predictably without requiring those methods to be called.
 
 ```cpp
-class Foo {
- public:
-  virtual ~Foo() = default;
-  virtual int GetSize() const = 0;
-  virtual void Process(int data) = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(void, Process, (int data), (override));
-};
+ON_CALL(mock_object, Method(matchers))
+    .WillByDefault(Return(default_value));
 ```
 
-### Notes:
-- If the class being mocked has overloaded methods, mock each overload explicitly.
-- Use parentheses around complex types with commas to avoid macro parsing errors.
-- For class templates, mock them similarly by providing templated mock classes.
+- Only specify behaviors, no enforcement on whether the method must be called.
+- Useful for setting common behavior shared across tests or in test fixture setup.
+- When multiple `ON_CALL`s apply, the latest matching one takes precedence.
 
----
-
-## 3. Setting Expectations on Mock Methods
-
-Expectations define how many times and in what way mock methods are expected to be called.
-
-### Typical Workflow
-1. Instantiate the mock object.
-2. Use `EXPECT_CALL` to declare expectations on mock methods.
-3. Optionally set default behaviors with `ON_CALL`.
-4. Exercise the code under test that interacts with the mocks.
-5. GoogleMock automatically verifies expectations at mock destruction or on explicit verification.
-
-### Syntax Overview:
+### Using `EXPECT_CALL` for Verified Calls
+Declare expectations that specify which methods must be called, with what arguments and how often.
 
 ```cpp
-EXPECT_CALL(mock_object, MethodName(matchers...))
+EXPECT_CALL(mock_object, Method(matchers))
     .Times(cardinality)
     .WillOnce(action)
-    .WillRepeatedly(action)
-    .InSequence(sequence1, sequence2)
-    .After(expectation1, expectation2)
-    .RetiresOnSaturation();
+    .WillRepeatedly(action);
 ```
 
+- Must be declared before the code-under-test exercises the mock.
+- If omitted, GoogleMock assumes one call (`Times(1)`).
+- Supports argument matchers for precise filtering.
+- Allows sequencing (`InSequence`) and ordering with multiple expectations.
 
-### Key Clauses:
+### Combining `ON_CALL` and `EXPECT_CALL`
+- `ON_CALL`: establishes baseline default behavior.
+- `EXPECT_CALL`: overrides for calls you intend to verify explicitly.
 
-- **`Times(cardinality)`**: How many times the method is expected. Examples include `Exactly(n)`, `AnyNumber()`, `AtLeast(n)`, `AtMost(n)`, and `Between(m, n)`.
-- **`WillOnce(action)`**: Behavior for the next matching call.
-- **`WillRepeatedly(action)`**: Behavior for all subsequent calls after `WillOnce` actions are used.
-- **`InSequence(...)`**: Specifies that calls must occur in the order the expectations are declared within the referenced sequences.
-- **`After(...)`**: Specifies that certain expectations must happen after other calls.
-- **`RetiresOnSaturation()`**: Automatically disables the expectation after the expected calls have been satisfied.
-
-### Example: Setting Expectations
+Use `ON_CALL` extensively to reduce boilerplate and tighten test focus, adding `EXPECT_CALL` only as needed:
 
 ```cpp
-using ::testing::Return;
-
-MockFoo mock;
-
-EXPECT_CALL(mock, GetSize())
-    .Times(3)
-    .WillRepeatedly(Return(42));
-
-EXPECT_CALL(mock, Process(5))
-    .WillOnce(Return())
-    .WillRepeatedly(Return());
-
-// Use mock in the code under test.
+ON_CALL(foo, GetValue(_)).WillByDefault(Return(0));
+EXPECT_CALL(foo, GetValue(5)).Times(1).WillOnce(Return(42));
 ```
 
+### Controlling Call Ordering and Sequences
 
-### Best Practices
-- Set expectations **before** exercising code that calls the mock.
-- Use matchers (like `_`, `Eq()`, `Lt()`, `Ge()`) to specify argument constraints.
-- Avoid over-specifying arguments to keep tests maintainable.
+- Use `InSequence` to enforce exact call order:
+
+```cpp
+{
+  InSequence seq;
+  EXPECT_CALL(mock, FirstCall());
+  EXPECT_CALL(mock, SecondCall());
+}
+```
+
+- Use sequences to define partial or complex orders across multiple mock objects:
+
+```cpp
+Sequence seq1, seq2;
+EXPECT_CALL(mockA, Foo()).InSequence(seq1, seq2);
+EXPECT_CALL(mockB, Bar()).InSequence(seq1);
+EXPECT_CALL(mockB, Baz()).InSequence(seq2);
+```
+
+- Use `After` clauses to specify dependency on other expectations.
+
+### Handling Multiple Expectations on the Same Method
+
+GoogleMock matches the last matching expectation first. For example:
+
+```cpp
+EXPECT_CALL(mock, Func(_));          // #1
+EXPECT_CALL(mock, Func(10)).Times(2); // #2
+```
+
+Calls to `Func(10)` will match expectation #2 first, falling back to #1 if #2 is saturated.
+
+### Retiring Expectations
+
+Use `.RetiresOnSaturation()` to make an expectation inactive once it has been met.
+
+```cpp
+EXPECT_CALL(mock, Foo()).Times(2).RetiresOnSaturation();
+EXPECT_CALL(mock, Foo()); // catch-all for further calls
+```
+
+Without this, saturated expectations remain active and may cause upper-bound errors.
 
 ---
 
-## 4. Using Default Behaviors with `ON_CALL`
+## 3. Practical Examples
 
-While `EXPECT_CALL` sets an expectation with verification, `ON_CALL` specifies default behavior without requiring a call.
-
-### Usage:
+### Example: Setting Default Behavior and Specific Expectations
 
 ```cpp
-ON_CALL(mock, MethodName(matchers...))
-    .WillByDefault(action);
-```
-
-### Purpose:
-- Allows you to provide default return values or actions for methods.
-- Avoids warnings about uninteresting calls when a method is called with no explicit expectation.
-
-### Example:
-
-```cpp
+#include <gmock/gmock.h>
+using ::testing::_;
 using ::testing::Return;
 
-MockFoo mock;
-ON_CALL(mock, GetSize())
-    .WillByDefault(Return(10));
+class MockDatabase {
+ public:
+  MOCK_METHOD(bool, Connect, (), ());
+  MOCK_METHOD(int, GetRecordCount, (const std::string& table), ());
+};
+
+TEST(DatabaseTest, UsesMockDatabase) {
+  MockDatabase mock_db;
+
+  // Default: Connect returns true.
+  ON_CALL(mock_db, Connect()).WillByDefault(Return(true));
+
+  // Expect Connect to be called once.
+  EXPECT_CALL(mock_db, Connect()).Times(1);
+
+  // Expect GetRecordCount to be called with any string, returns 42.
+  EXPECT_CALL(mock_db, GetRecordCount(_)).WillRepeatedly(Return(42));
+
+  // Code under test elicits mock calls...
+  mock_db.Connect();
+  int count = mock_db.GetRecordCount("users");
+  EXPECT_EQ(count, 42);
+}
 ```
 
-Now calls to `mock.GetSize()` will return 10 unless overridden by `EXPECT_CALL`.
-
----
-
-## 5. Choosing Mock Strictness Levels
-
-GoogleMock supports three mock strictness levels that control behavior on uninteresting calls (methods called with no expectations). Uninteresting calls are:
-
-- Calls to mock methods that have no `EXPECT_CALL` defined.
-
-### Strictness Types:
-
-| Mock Type               | Behavior on Uninteresting Calls                 | When to Use                                   |
-|------------------------|------------------------------------------------|-----------------------------------------------|
-| **NaggyMock** (default) | Prints a warning but allows the call.           | Use during active test development and debugging.
-|
-| **NiceMock<T>**         | Suppresses warnings, allows calls silently.     | For tests where you want to ignore irrelevant calls and keep output clean.
-|
-| **StrictMock<T>**       | Treats uninteresting calls as failures.         | When you want full coverage of method calls and the most strict check.
-
-### Usage:
+### Example: Ordered Calls
 
 ```cpp
+TEST(SequenceTest, StrictOrderOfOperations) {
+  MockDatabase mock_db;
+  {
+    InSequence s;
+    EXPECT_CALL(mock_db, Connect());
+    EXPECT_CALL(mock_db, GetRecordCount("users"));
+    EXPECT_CALL(mock_db, GetRecordCount("orders"));
+  }
+
+  // Calls must be in order:
+  mock_db.Connect();
+  mock_db.GetRecordCount("users");
+  mock_db.GetRecordCount("orders");
+}
+```
+
+### Example: Using NiceMock to Ignore Uninteresting Calls
+
+```cpp
+#include <gmock/gmock.h>
 using ::testing::NiceMock;
-using ::testing::StrictMock;
 
-NiceMock<MockFoo> nice_mock_foo;  // Suppresses warnings on uninteresting calls
-StrictMock<MockFoo> strict_mock_foo;  // Treats uninteresting calls as failures
+NiceMock<MockDatabase> mock_db;
+
+EXPECT_CALL(mock_db, Connect()).Times(1);
+
+// Calls to other methods without expectations don't raise warnings.
+mock_db.Connect();
+mock_db.GetRecordCount("anything");  // No warning
 ```
 
-### Important Notes:
-- `NiceMock` and `StrictMock` only work if mock methods are declared with `MOCK_METHOD` directly in the mock class (not inherited).
-- Switching to strict mocks may cause brittle tests if mocks expect many calls to uninteresting methods.
-- Consider using `NiceMock` for larger, more complex mocks to reduce noise.
-
----
-
-## 6. Working with Matchers and Actions
-
-Matchers specify criteria for expectation arguments. Actions define what the mock method does when called.
-
-### Common Matchers
-- `_`: Matches any argument.
-- `Eq(value)`: Matches arguments equal to `value`.
-- `Ge(value)`, `Le(value)`, `Lt(value)`, `Gt(value)`: Comparison matchers.
-
-### Actions Reference
-- `Return(value)`: Return a value.
-- `ReturnRef(variable)`: Return a reference to a variable.
-- `SetArgPointee<N>(value)`: Assign to output argument pointer.
-- `Invoke(func)`: Call a function or functor.
-- `DoAll(action1, action2, ...)`: Perform multiple actions sequentially.
-
-For a full list of matchers and actions, see [Matchers Reference](../api_reference/core_testing_apis/matchers_reference) and [Actions Reference](../api_reference/core_testing_apis/actions_reference).
-
----
-
-## 7. Testing Call Order and Cardinality
-
-### Cardinality
-Controls how many times a method is expected to be called.
-
-- `Exactly(n)` or `Times(n)`: Call exactly n times.
-- `AnyNumber()`: Any number of calls.
-- `AtLeast(n)`: At least n times.
-- `AtMost(n)`: At most n times.
-- `Between(m, n)`: Between m and n times, inclusive.
-
-### Call Ordering
-- By default, expectations match calls in any order.
-- Use sequences to enforce order:
+### Example: Delegating a Mock's Default Behavior to a Real Implementation
 
 ```cpp
-using ::testing::Sequence;
-Sequence s;
-EXPECT_CALL(mock, Foo()).InSequence(s);
-EXPECT_CALL(mock, Bar()).InSequence(s);
+class RealDatabase {
+ public:
+  bool Connect() { /* real connect code */ return true; }
+  int GetRecordCount(const std::string& table) { /* real code */ return 10; }
+};
+
+class MockDatabase : public RealDatabase {
+ public:
+  MOCK_METHOD(bool, Connect, (), (override));
+  MOCK_METHOD(int, GetRecordCount, (const std::string& table), (override));
+
+  MockDatabase() {
+    ON_CALL(*this, Connect()).WillByDefault([this]() { return real_.Connect(); });
+    ON_CALL(*this, GetRecordCount(_)).WillByDefault(
+        [this](const std::string& table) { return real_.GetRecordCount(table); });
+  }
+
+ private:
+  RealDatabase real_;
+};
 ```
 
-- For partial orders, use `After`:
+With this, you can still specify `EXPECT_CALL` to verify calls, while behaving like the real database by default.
+
+---
+
+## 4. Best Practices and Tips
+
+- **Prefer `ON_CALL` for default behaviors:** Avoid over-constraining tests unnecessarily.
+- **Use explicit `EXPECT_CALL` sparingly:** Only when verifying actual call expectations.
+- **Order matters:** Place more specific expectations after more general ones for proper overriding.
+- **Use sequences to assert strict or partial order only when necessary:** Overly strict ordering can make tests brittle.
+- **Suppress noisy warnings with `NiceMock`:** Use `NiceMock` for mocks with many uninteresting calls.
+- **Use `RetiresOnSaturation()` to manage multiple overlapping expectations:** Helps prevent excessive call errors.
+- **Avoid mocking classes you do not own:** To reduce maintenance overhead, mock interfaces you control.
+
+---
+
+## 5. Common Pitfalls & Troubleshooting
+
+### Uninteresting Call Warnings
+If you see `Uninteresting mock function call` warnings:
+- Consider adding a catch-all `EXPECT_CALL(mock, Method(_)).Times(AnyNumber());`
+- Alternatively use `NiceMock` to silence them globally.
+
+### Unexpected Calls
+If the test fails with unexpected call errors:
+- Verify that you have set correct `EXPECT_CALL`s before exercising the mock.
+- Ensure argument matchers cover all expected cases.
+
+### Too Many / Too Few Actions Warnings
+- Check the number of `.WillOnce()` clauses matches your `Times()` expectation.
+- Use `WillRepeatedly()` to define fallback behaviors for excess calls.
+
+### Ordering Errors
+- Use `InSequence` or `Sequence` properly to encode required call order.
+- Avoid partial ordering when exact order is not required to reduce fragile tests.
+
+---
+
+## 6. Next Steps and Related Content
+
+- **Defining and Using Mock Classes**: Learn how to define mock interfaces and use `MOCK_METHOD`.
+- **Setting Expectations and Actions**: Deep dive on `EXPECT_CALL` and `ON_CALL` clauses.
+- **Matchers for Arguments and Outcomes**: Explore the wide variety of argument matchers available.
+- **Actions for Controlling Behavior**: Discover predefined and custom actions for mock methods.
+- **Controlling Mock Call Policies**: Use `NiceMock`, `StrictMock`, and `NaggyMock` to manage uninteresting calls.
+
+For a beginner-friendly start, consider:
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [Your First Mock with GoogleMock](../getting-started/first-mock-example)
+
+---
+
+<AccordionGroup title="Key Patterns">
+<Accordion title="Using ON_CALL for Default Behavior">
+Use `ON_CALL` to specify the default action your mock methods should perform when called. This allows tests to pass even without explicit expectations.
 
 ```cpp
-Expectation e1 = EXPECT_CALL(mock, Foo());
-EXPECT_CALL(mock, Bar()).After(e1);
+ON_CALL(mock, Method(_))
+    .WillByDefault(Return(default_value));
 ```
-
----
-
-## 8. Verifying and Resetting Mocks
-
-Verification happens automatically when mock objects are destructed.
-
-You can manually verify and clear expectations:
+</Accordion>
+<Accordion title="Defining Precise Expectations with EXPECT_CALL">
+Use `EXPECT_CALL` to enforce that certain mock methods are called with expected arguments and cardinalities.
 
 ```cpp
-using ::testing::Mock;
-
-Mock::VerifyAndClearExpectations(&mock_obj);  // Verify and clear expectations
-Mock::VerifyAndClear(&mock_obj);               // Verify, clear expectations and default actions
+EXPECT_CALL(mock, Method(ArgMatcher))
+    .Times(1)
+    .WillOnce(Return(specific_value));
 ```
-
-Use these only after you stop exercising the mock, never set new expectations after verification as it results in undefined behavior.
-
-If a mock object is intentionally leaked (e.g., owned outside test scope), mark it as leaked to skip verification:
+</Accordion>
+<Accordion title="Sequences and Ordering">
+Wrap multiple `EXPECT_CALL`s inside an `InSequence` block to enforce order:
 
 ```cpp
-Mock::AllowLeak(&mock_obj);
+{
+  InSequence s;
+  EXPECT_CALL(mock, First());
+  EXPECT_CALL(mock, Second());
+}
 ```
+</Accordion>
+<Accordion title="Managing Uninteresting Calls">
+Suppress warnings about uninteresting calls using `NiceMock` or handle them strictly with `StrictMock`.
+
+```cpp
+NiceMock<MockClass> nice_mock;
+StrictMock<MockClass> strict_mock;
+```
+</Accordion>
+</AccordionGroup>
 
 ---
-
-## 9. Advanced Topics and Tips
-
-- **Mocking Move-Only Types:** GoogleMock supports mocking methods with `std::unique_ptr` and other move-only types.
-- **Delegating Calls:** You can delegate mocks to real or fake objects to preserve behavior while verifying interactions.
-- **Mocking Non-Virtual Methods:** Possible using templates and compile-time injection.
-- **Checking Arguments:** Save arguments with `SaveArg<N>` to verify complex calls.
-
----
-
-## 10. Troubleshooting Common Issues
-
-- **Uninteresting Call Warnings:** Use `NiceMock` to suppress or add broad `EXPECT_CALL` to explicitly allow calls.
-- **Unexpected Calls:** Verify arguments and the order of `EXPECT_CALL` statements.
-- **Virtual Destructor Requirement:** Ensure base classes have virtual destructors to avoid leaks.
-- **Overloaded Methods:** Mock all overloads to avoid hidden method warnings.
-- **Performance:** Define constructor and destructor outside headers to speed compilation.
-
----
-
-## 11. Summary
-
-By defining mocks with `MOCK_METHOD`, setting clear expectations with `EXPECT_CALL`, and selecting the appropriate strictness level (`NiceMock`, `NaggyMock`, `StrictMock`), you create robust and maintainable tests. Use `ON_CALL` to provide default behaviors, and leverage matchers and actions to describe interactions precisely.
-
-Always verify and clear mocks correctly and learn to handle common pitfalls like unexpected/uninteresting calls or overload ambiguities. The thoughtful use of sequences and cardinalities enforces correct call order and frequency.
-
----
-
-## 12. Additional Resources
-
-- [Matchers Reference](../api_reference/core_testing_apis/matchers_reference)
-- [Actions Reference](../api_reference/core_testing_apis/actions_reference)
-- [Mocking Reference](../api_reference/mocking_and_expectations/creating_mock_objects)
-- [gMock for Dummies Guide](https://google.github.io/googletest/gmock_for_dummies.html)
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-
----
-
-Feel free to explore the [GoogleTest User's Guide](https://google.github.io/googletest/) for broader context and to expand your mastery of C++ testing with GoogleTest and GoogleMock.
